# t-rand

./: .traivs.yml  README.md
src/: hash.h  lang.h  mt19937.h  rand.h
test/: CMakeLists.txt
test/mt/: CMakeLists.txt  test.cpp
